# LinearRegCpp

./: .gitignore  CMakeLists.txt  README.md  a.out  config.h  linear_regression.cpp  linear_regression.h  main.cpp
